// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`passed down onBlur and onFocus are called 1`] = `
<div>
  <div
    class=""
    data-testid="text-input"
  >
    <div
      class="root"
    >
      <input
        aria-invalid="false"
        class=""
        id="operator"
        type="text"
        value="hi"
      />
    </div>
  </div>
</div>
`;

exports[`render text field wrapper 1`] = `
<div>
  <div
    class=""
    data-testid="text-input"
  >
    <div
      class="root"
    >
      <input
        aria-invalid="false"
        class=""
        id="operator"
        placeholder="Test Placeholder"
        type="text"
        value="test value"
      />
    </div>
  </div>
</div>
`;

exports[`render text field wrapper with label, helperText, and readonly 1`] = `
<div>
  <div
    class=""
    data-testid="readonly-text-input"
  >
    <label
      class=""
      data-shrink="true"
      for="operator"
      id="operator-label"
    >
      test label
    </label>
    <div
      class="root disabled"
    >
      <input
        aria-describedby="operator-helper-text"
        aria-invalid="false"
        class="disabled"
        disabled=""
        id="operator"
        readonly=""
        type="text"
        value="test value"
      />
    </div>
    <p
      class=""
      id="operator-helper-text"
    >
      test helper text
    </p>
  </div>
</div>
`;

exports[`render text field wrapper with readonly as true show default value 1`] = `
<div>
  <div
    class=""
    data-testid="readonly-text-input"
  >
    <div
      class="root disabled"
    >
      <input
        aria-invalid="false"
        class="disabled"
        disabled=""
        id="operator"
        readonly=""
        type="text"
        value="-"
      />
    </div>
  </div>
</div>
`;

exports[`text field wrapper with readonly as true shows custom default value 1`] = `
<div>
  <div
    class=""
    data-testid="readonly-text-input"
  >
    <div
      class="root disabled"
    >
      <input
        aria-invalid="false"
        class="disabled"
        disabled=""
        id="operator"
        readonly=""
        type="text"
        value="blahhh"
      />
    </div>
  </div>
</div>
`;

exports[`text field wrapper with readonly as true shows custom default value 2`] = `
<div>
  <div
    class=""
    data-testid="readonly-text-input"
  >
    <div
      class="root disabled"
    >
      <input
        aria-invalid="false"
        class="disabled"
        disabled=""
        id="operator"
        readonly=""
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;
